<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.wenull.meetcrypt_students.data.auth.PhoneAuthViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.fragments.auth.IntroFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/illustration_margin_top">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_intro_phone_auth"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_layout_fragments">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="bottom|center"
                    android:text="@string/intro_greeting"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_20sp" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Widget.MaterialComponents.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:minLines="4"
                    android:text="@string/intro_info"
                    android:textAlignment="center"
                    android:textColor="#E6000000"
                    android:paddingEnd="@dimen/intro_info_padding"
                    android:paddingStart="@dimen/intro_info_padding"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/proceed"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_style"
                        android:paddingLeft="@dimen/padding_intro_buttons"
                        android:paddingRight="@dimen/padding_intro_buttons"
                        android:text="@string/proceed_button"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>
