<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.wenull.meetcrypt_students.data.auth.PhoneAuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.auth.PhoneNumberFragment"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/illustration_margin_top">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_phone_auth_enter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/padding_layout_fragments">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_horizontal|bottom"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/enter_your_phone_number"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/input_style"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:text="@={viewModel.phoneNumber}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/otp_dash_unfocused"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/phone_number_info"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom|center">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="@dimen/padding_12dp">

                    <Button
                        android:id="@+id/verify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_style"
                        android:paddingLeft="@dimen/padding_intro_buttons"
                        android:paddingRight="@dimen/padding_intro_buttons"
                        android:text="@string/verify_button"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:color/transparent" />

    </LinearLayout>

</layout>
